# GPX_Analyst

./: .gitignore  README.md  pyproject.toml  requirements.txt
compare_gpx/: __init__.py  cli.py  comparator.py  parser.py  visualizer.py
compare_gpx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: CHANGELOG.md
files/: THE_TRAKA_ADVENTURE_560_2026.gpx
gpx_analyst/: __init__.py  batch.py  cli.py
gpx_analyst/compare_gpx/: __init__.py  cli.py  comparator.py  parser.py
gpx_analyst/core/: README.md  __init__.py  geo.py  parser.py  power.py
gpx_analyst/drafting/: README.md  __init__.py  analyzer.py  cli.py  interpolator.py  visualizer.py
gpx_analyst/mutant_performance/: README.md  __init__.py  analyzer.py  cli.py  sleep.py  visualizer.py
gpx_analyst/riding_together/: README.md  __init__.py  analyzer.py  cli.py  visualizer.py
gpx_analyst/suspicious_stops/: README.md  __init__.py  analyzer.py  cli.py  visualizer.py
gpx_analyst/templates/: report.html.j2
