[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "compare-gpx"
version = "0.1.0"
description = "Compare two GPX tracks and visualize deviations"
requires-python = ">=3.9"
dependencies = [
    "gpxpy>=1.5.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "folium>=0.15",
    "branca>=0.7",
]

[project.scripts]
compare-gpx = "compare_gpx.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["compare_gpx*"]
